some deprecation fixes