@@ -646,7 +646,7 @@ protected static int toInt(boolean value) {
 public java.util.ArrayList toList() {
 	int mySize = size();
 	java.util.ArrayList list = new java.util.ArrayList(mySize);
-	for (int i=0; i < mySize; i++) list.add(new Boolean(get(i)));
+	for (int i=0; i < mySize; i++) list.add(Boolean.valueOf(get(i)));
 	return list;
 }
 /**
