@@ -764,7 +764,7 @@ public AbstractByteList times(int times) {
 public java.util.ArrayList toList() {
 	int mySize = size();
 	java.util.ArrayList list = new java.util.ArrayList(mySize);
-	for (int i=0; i < mySize; i++) list.add(new Byte(get(i)));
+	for (int i=0; i < mySize; i++) list.add(Byte.valueOf(get(i)));
 	return list;
 }
 /**
