@@ -764,7 +764,7 @@ public AbstractFloatList times(int times) {
 public java.util.ArrayList toList() {
 	int mySize = size();
 	java.util.ArrayList list = new java.util.ArrayList(mySize);
-	for (int i=0; i < mySize; i++) list.add(new Float(get(i)));
+	for (int i=0; i < mySize; i++) list.add(Float.valueOf(get(i)));
 	return list;
 }
 /**
