@@ -299,8 +299,8 @@ public static void testQuantileCalculation(String[] args) {
 	int chunks=Integer.parseInt(args[4]);
 	boolean computeExactQuantilesAlso=args[5].equals("exact");
 	boolean doShuffle=args[6].equals("shuffle");
-	double epsilon = new Double(args[7]).doubleValue();
-	double delta = new Double(args[8]).doubleValue();
+	double epsilon = Double.valueOf(args[7]).doubleValue();
+	double delta = Double.valueOf(args[8]).doubleValue();
 	int quantiles = Integer.parseInt(args[9]);	
 	long max_N = Long.parseLong(args[10]);	
 
